All pages loading (except book)

--- a/Salon/client/src/pages/styles/style.css
+++ b/Salon/client/src/pages/styles/style.css
@@ -74,6 +74,8 @@ h1{
 .card-container{
     display: flex;
     justify-content: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 /* This code gets rid of "log out" button styling */
