--- a/Salon/client/src/index.css
+++ b/Salon/client/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* datepciker css */
+.mbsc-datepicker .quarter-year-header-picker .mbsc-segmented {
+  max-width: 280px;
+  margin: 0 auto;
+}
+
+.quarter-year-header-picker {
+  flex: 1 0 auto;
+}
