Cleaned up nav and interface look

--- a/Salon/client/src/pages/styles/style.css
+++ b/Salon/client/src/pages/styles/style.css
@@ -30,6 +30,10 @@ h1{
     justify-content: space-between;
 }
 
+span {
+    justify-content: flex-end;
+}
+
 .header {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdg-gTpJQVxeZp1P8WfymtepP_iCQWx1P2rw7K37ZyngvtO7cK5icexEhnosK-vHX9Qlk&usqp=CAU);
     height: 9rem;
@@ -258,7 +262,7 @@ a {
 
     .header {
         font-size: 6rem;
-        height: 8vh;
+        height: 14vh;
         width: 130vw;
     }
 
